fix collapse for mobile application

--- a/lms/static/sass/course-outline/_course-outline.scss
+++ b/lms/static/sass/course-outline/_course-outline.scss
@@ -20,6 +20,9 @@
     &_hide {
         display: none;
     }
+    &__height {
+        height: 0;
+    }
     .course-outline__open & {
         &_more {
             display: none;
